--- a/caseStudy/furama/src/main/resources/templates/customerType/view.html
+++ b/caseStudy/furama/src/main/resources/templates/customerType/view.html
@@ -8,5 +8,6 @@
 <h1>CustomerType information</h1>
 <p th:text="'ID: '+ ${customerType.id}"></p>
 <p th:text="'Name: ' + ${customerType.name}"></p>
+<a th:href="@{/customerType}" class="btn btn-outline-primary">Back</a>
 </body>
 </html>
