--- a/bai10_session_cookie_trong_spring/bai_tap/create_product_cart/src/main/resources/templates/list.html
+++ b/bai10_session_cookie_trong_spring/bai_tap/create_product_cart/src/main/resources/templates/list.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1 style="color: blue;text-align: center">Product MotorBike</h1>
+<h2 style="float: right;margin-top: -50px"><a th:href="@{/cart}"><img src="img/empty-cart.png" style="height: 70px;width: 80px"></a></h2>
 <br>
 <table class="table table-striped">
     <thead>
@@ -33,7 +34,7 @@
         <td th:text="${product.description}"></td>
         <td>
             <button>
-                <a th:href="@{/product/addToCart/{id}(id=${product.id})}">Buy</a>
+                <a th:href="@{/cart/{id}/add(id=${product.id})}">Buy</a>
             </button>
         </td>
     </tr>
