--- a/bai9_AOP_exception_handing/bai_tap/ung_dung_muon_sach/src/main/resources/templates/detail.html
+++ b/bai9_AOP_exception_handing/bai_tap/ung_dung_muon_sach/src/main/resources/templates/detail.html
@@ -2,17 +2,43 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Blog</title>
+    <title>Book</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
-<body style="text-align: center">
+<body>
+<div class="container">
 
-<a th:href="@{/}">
-    Back to home
-</a><br>
-<input type="hidden" value="${book.id}">
-<h3>Name : <span th:text="${book.name}"></span></h3>
-<h3>Content : <span th:text="${book.content}"></span></h3>
+    <a th:href="@{/book/list}">List Book</a><br>
+    <h3 th:if="${message}" th:text="${message}"></h3>
+    <table class="table table-striped" >
+        <tr>
+            <th>Id</th>
+            <th>cart Id</th>
+            <th>Book Id</th>
+            <th>Date Borrow</th>
+            <th>Trả Sách</th>
+        </tr>
+        <th:block th:each="borrow : ${borrowList}">
+            <tr>
+                <td th:text="${borrow.id}" ></td>
+                <td th:text="${borrow.bookBorrowCard.id}"></td>
+                <td th:text="${borrow.book.id}"></td>
+                <td th:text="${borrow.dateBorrow}"></td>
+                <td>
+                    <a th:href="@{/borrow/{id}/view(id=${borrow.getId()})}" class="btn btn-outline-primary">view</a>
+                </td>
+            </tr>
+        </th:block>
+    </table>
+</div>
 
-<a th:href="@{/borrow(id=${book.id})}">Borrow</a>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
