--- a/caseStudy/furama/src/main/resources/templates/customer/create.html
+++ b/caseStudy/furama/src/main/resources/templates/customer/create.html
@@ -12,6 +12,7 @@
         <div class="form-group">
             <label class="col-form-label col-2">Id</label>
             <input class="form-control col-6" type="text" th:field="*{id}"/>
+            <label style="color: red" th:if="${message1}" th:text="${message1}"></label>
         </div>
         <div class="form-group">
             <label class="col-form-label col-2">Name</label>
