--- a/caseStudy/furama/src/main/resources/templates/employee/create.html
+++ b/caseStudy/furama/src/main/resources/templates/employee/create.html
@@ -9,7 +9,7 @@
         <div class="form-group">
             <label class="col-form-label col-2">Id</label>
             <input class="form-control col-6" type="text" th:field="*{id}" th:readonly />
-            <h2 th:if="${message}" th:text="${message}" style="color: red"></h2>
+            <h2 th:if="${message1}" th:text="${message1}" style="color: red"></h2>
         </div>
         <div class="form-group">
             <label class="col-form-label col-2">Name</label>
