--- a/caseStudy/furama/src/main/resources/templates/customer/list.html
+++ b/caseStudy/furama/src/main/resources/templates/customer/list.html
@@ -32,22 +32,31 @@
             <tbody>
             <th:block th:each="customer : ${customerList}">
                 <tr>
-                    <td th:text="${customer.id}"></td>
+                    <td th:text="${customer.id}" id="id"></td>
                     <td><a th:href="@{/customer/{id}/view(id=${customer.id})}" th:text="${customer.name}"></a></td>
                     <td th:text="${customer.birthday}"></td>
                     <td th:text="${customer.phone}"></td>
                     <td th:text="${customer.email}"></td>
                     <td th:text="${customer.customerType.name}"></td>
-                    <td><a th:href="@{/customer/{id}/update(id=${customer.id})}"
+                    <td>
+                        <a th:href="@{/customer/{id}/update(id=${customer.id})}"
                            class="btn btn-outline-primary">Edit</a>
                     </td>
-                    <td><a th:href="@{/customer/{id}/delete(id=${customer.id})}"
-                           class="btn btn-outline-danger">Delete</a>
+                    <td>
+                        <a data-toggle="modal" data-target="#modalDelete"
+                           th:data-id="${customer.getId()}" th:data-name="${customer.name}"
+                           onclick="getId(this.getAttribute('data-id'))" class="btn btn-danger delete">Delete</a>
+
+
+                        <!--                        <input type="hidden" th:value="${giaoDich.getMaGiaoDich()}">-->
+<!--                        <a th:href="@{/customer/{id}/delete(id=${customer.id})}"-->
+<!--                           class="btn btn-outline-danger">Delete</a>-->
                     </td>
                 </tr>
             </th:block>
             </tbody>
         </table>
+
 <!--        <div>-->
 <!--            <a th:href="@{'/customer'(page=${customerList.number - 1})}"-->
 <!--               th:if="${customerList.hasPrevious()}">Previous</a>-->
@@ -81,5 +90,60 @@
         </div>
     </div>
 </div>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Customer</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form th:action="@{/customer/delete}" method="get">
+                <input type="hidden" id="deleteId" name="id">
+                <div class="modal-body">
+                    <h3>Do you want to delete customer: </h3>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">cancel</button>
+                    <button type="submit" class="btn btn-primary">ok</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 </body>
+
+
+<!--<script>-->
+<!--  $(document).ready(Function(){-->
+<!--      $('[data-toggle="tooltip"]').tooltip();-->
+<!--     $('.delete').on('click',function () {-->
+<!--         var id = $(this).parent().find('#id').val();-->
+<!--         $('#deleteModal #id').val(id);-->
+<!--         // $("#deleteModal input[id='deleteId']").val($(this).data("id"));-->
+<!--     });-->
+<!--  });-->
+<!--</script>-->
+
+<!--<script>-->
+<!--    $(".delete").click(-->
+<!--        function () {-->
+<!--            $("#deleteModal input[id='deleteId']").val($(this).data("id"));-->
+<!--            $("#deleteModal input[id='warning']").val(" ID : "-->
+<!--                + $(this).data("id") + " name is : " + $(this).data("name") + "  ?");-->
+<!--        }-->
+<!--    );-->
+<!--</script>-->
+<script>
+    function getId(id) {
+        $('#deleteId').val(id)
+    }
+</script>
 </html>
