--- a/caseStudy/furama/src/main/resources/templates/employee/edit.html
+++ b/caseStudy/furama/src/main/resources/templates/employee/edit.html
@@ -65,6 +65,12 @@
                         th:selected="(${cusType.id} == *{division.id})"></option>
             </select>
         </div>
+        <div class="form-group">
+            <label class="col-form-label col-2">username</label>
+            <select th:field="*{user}" >
+                <option th:each="cusType:${userList}" th:text="${cusType.username}" th:value="${cusType.username}"></option>
+            </select>
+        </div>
         <input type="submit" class="btn btn-outline-success" value="Edit"/>
     </form>
     <a th:href="@{/employee}" class="btn btn-outline-primary">Back</a>
