--- a/caseStudy/furama/src/main/resources/templates/employee/list.html
+++ b/caseStudy/furama/src/main/resources/templates/employee/list.html
@@ -5,71 +5,112 @@
 <body>
 <div th:insert="~{layout::content}"></div>
 <div id="content">
-<div class="container">
-    <form style="float: right" th:action="@{/employee/keyword}" class="form-inline my-2 my-lg-0" method="post">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search by name" aria-label="Search"
-               th:name="keyword">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    <h1 class="text-center"><a th:href="@{/employee}">Employee List</a></h1>
-    <a th:href="@{/employee/create}">Create New Employee</a>
-    <h2 th:if="${message}" th:text="${message}" style="color: red"></h2>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Birthday</th>
-            <th>Id Card</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>PositionId</th>
-            <th>EducationId</th>
-            <th>DivisionId</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-        </thead>
-        <tbody>
-        <th:block th:each="employee : ${employeeList}">
+    <div class="container">
+        <form style="float: right" th:action="@{/employee/keyword}" class="form-inline my-2 my-lg-0" method="post">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search by name" aria-label="Search"
+                   th:name="keyword">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        <h1 class="text-center"><a th:href="@{/employee}">Employee List</a></h1>
+        <a th:href="@{/employee/create}">Create New Employee</a>
+        <h2 th:if="${message}" th:text="${message}" style="color: red"></h2>
+        <table class="table">
+            <thead>
             <tr>
-                <td th:text="${employee.id}"></td>
-                <td><a th:href="@{employee/{id}/view(id=${employee.id})}" th:text="${employee.name}"></a></td>
-                <td th:text="${employee.birthday}"></td>
-                <td th:text="${employee.idCard}"></td>
-                <td th:text="${employee.phone}"></td>
-                <td th:text="${employee.email}"></td>
-                <td th:text="${employee.position.name}"></td>
-                <td th:text="${employee.educationDegree.name}"></td>
-                <td th:text="${employee.division.name}"></td>
-                <td><a th:href="@{/employee/{id}/update(id=${employee.id})}" class="btn btn-outline-primary">Edit</a>
-                </td>
-                <td><a th:href="@{/employee/{id}/delete(id=${employee.id})}" class="btn btn-outline-danger">Delete</a>
-                </td>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Birthday</th>
+                <th>Id Card</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>PositionId</th>
+                <th>EducationId</th>
+                <th>DivisionId</th>
+                <th>username</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
-        </th:block>
-        </tbody>
-    </table>
-    <!--    <div>-->
-    <!--        <a th:href="@{'/customer'(page=${customerList.number - 1})}" th:if="${customerList.hasPrevious()}">Previous</a>-->
-    <!--        <span th:text="${customerList.number + 1}"></span>/<span th:text="${customerList.totalPages}"></span>-->
-    <!--        <a th:href="@{'/customer'(page=${customerList.number + 1})}" th:if="${customerList.hasNext()}">Next</a>-->
-    <!--    </div>-->
-    <div class="pagination-div">
+            </thead>
+            <tbody>
+            <th:block th:each="employee : ${employeeList}">
+                <tr>
+                    <td th:text="${employee.id}"></td>
+                    <td><a th:href="@{employee/{id}/view(id=${employee.id})}" th:text="${employee.name}"></a></td>
+                    <td th:text="${employee.birthday}"></td>
+                    <td th:text="${employee.idCard}"></td>
+                    <td th:text="${employee.phone}"></td>
+                    <td th:text="${employee.email}"></td>
+                    <td th:text="${employee.position.name}"></td>
+                    <td th:text="${employee.educationDegree.name}"></td>
+                    <td th:text="${employee.division.name}"></td>
+                    <td th:text="${employee.user.username}"></td>
+                    <td><a th:href="@{/employee/{id}/update(id=${employee.id})}"
+                           class="btn btn-outline-primary">Edit</a>
+                    </td>
+                    <td><a th:data-id="${employee.id}" th:data-name="${employee.name}" data-toggle="modal" data-target="#modelId"
+                           class="btn btn-outline-danger delete">Delete</a>
+                    </td>
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
+
+        <div class="pagination-div">
     <span th:if="${employeeList.hasPrevious()}">
         <a th:href="@{/employee(page=${employeeList.number - 1},keyword=${keywordOld},size=${employeeList.size})}">Previous</a>
     </span>
-        <th:block th:each="i: ${#numbers.sequence(0, employeeList.totalPages - 1)}">
-            <span th:if="${employeeList.number == i}" class="selected">[[${i}+1]]</span>
-            <span th:unless="${employeeList.number == i}">
+            <th:block th:each="i: ${#numbers.sequence(0, employeeList.totalPages - 1)}">
+                <span th:if="${employeeList.number == i}" class="selected">[[${i}+1]]</span>
+                <span th:unless="${employeeList.number == i}">
              <a th:href="@{/employee(page=${i},size=${employeeList.size},keyword=${keywordOld})}">[[${i}+1]]</a>
         </span>
-        </th:block>
-        <span th:if="${employeeList.hasNext()}">
+            </th:block>
+            <span th:if="${employeeList.hasNext()}">
         <a th:href="@{/employee(page=${employeeList.number+1},keyword=${keywordOld},size=${employeeList.size})}">Next</a>
     </span>
+        </div>
+
     </div>
 </div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Employee</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form th:action="@{/employee/delete}">
+                <input type="hidden" id="deleteId" name="id">
+            <div class="modal-body">
+                <span id="messageModal"></span>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">cancel</button>
+                <button type="submit" class="btn btn-primary">ok</button>
+            </div>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
+
+<script>
+    $(".delete").click(function () {
+        let id = $(this).attr("data-id");
+        let name = $(this).attr("data-name");
+
+        console.log("id là:"+id);
+
+        $("#deleteId").val(id);
+        $("#messageModal").text("customer want to delete: "+name);
+
+        $("#modelId").modal('show');
+    })
+</script>
 </html>
