--- a/caseStudy/furama/src/main/resources/templates/layout.html
+++ b/caseStudy/furama/src/main/resources/templates/layout.html
@@ -3,20 +3,20 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Furama</title>
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"-->
-<!--          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
-<!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"-->
-<!--            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"-->
-<!--            crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"-->
-<!--            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"-->
-<!--            crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"-->
-<!--            integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"-->
-<!--            crossorigin="anonymous"></script>-->
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+            integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+            crossorigin="anonymous"></script>
+<!--    <link rel="stylesheet" href="css/bootstrap.min.css">-->
+<!--    <script src="/js/jquery-3.5.1.min.js"></script>-->
+<!--    <script src="/js/bootstrap.js"></script>-->
     <style>
         #head{
             width: 100%;
@@ -32,12 +32,12 @@
             position: absolute;
         }
         #head_top a{
-            margin-top: 10px;
+            margin-top: 20px;
             float: left;
         }
         #head_top p{
             color: red;
-            margin-top: 30px;
+            margin-top: 20px;
             float: right;
             margin-right: 30px;
         }
@@ -71,9 +71,9 @@
 <div th:fragment="content" id="head">
     <div id="head_top">
         <a href="#">
-            <img src="img/logo.png" height="50px" width="200px">
+            <img src="/img/logo.png" height="50px" width="200px">
         </a>
-        <p><a href="#">NGUYỄN KHOA-C092G1</a></p>
+        <p><a th:href="@{/login}">LOGIN</a></p>
     </div>
     <div id="headbottom">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -120,6 +120,9 @@
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" th:href="@{/contractDetail}">ContractDetail <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a style="color: red" class="nav-link" th:href="@{/logout}">LOGOUT <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
